# HidMixer

./: .gitmodules  CMakeLists.txt
BleAction/: library.json
BleAction/src/HidMixer/: BleAction.h
BleAction/src/HidMixer/BleActionDetail/: BleAction.cpp  BleAction.h
BluefruitConnectionManager/: library.json
BluefruitConnectionManager/src/HidMixer/: BluefruitConnectionManager.h
BluefruitConnectionManager/src/HidMixer/BluefruitConnectionManagerDetail/: BLECentralProfile.h  BLEPeripheralProfile.h  BluefruitConnectionManager.cpp  BluefruitConnectionManager.h  CentralManager.cpp  CentralManager.h  PeripheralManager.cpp  PeripheralManager.h
HidEngine/: CMakeLists.txt  library.json
HidEngine/src/HidMixer/: HidEngine.h
HidEngine/src/HidMixer/HidEngineDetail/: ActionImpl.cpp  ActionImpl.h  ActionTapper.cpp  ActionTapper.h  HidCore.cpp  HidCore.h  HidEngine.cpp  HidEngine.h  HidEngineTask.cpp  HidEngineTask.h  HidEngine_config.h  KeyCode.h  TimerMixin.cpp  TimerMixin.h  new_Action.h  types.cpp  types.h  utility.h
HidReporter/: CMakeLists.txt  library.json
HidReporter/src/HidMixer/: HidReporter.h
HidReporter/src/HidMixer/HidReporterDetail/: HidReportDescriptor.h
MemStore/: library.json
MemStore/src/HidMixer/: MemStore.cpp  MemStore.h
Set/: CMakeLists.txt  library.json
Set/src/HidMixer/: Set.cpp  Set.h
TinyUsbHidReporter/: CMakeLists.txt  library.json
TinyUsbHidReporter/src/HidMixer/: TinyUsbHidReporter.h
TinyUsbHidReporter/src/HidMixer/TinyUsbHidReporterDetail/: TinyUsbHidReporter.cpp  TinyUsbHidReporter.h
UsbAction/: CMakeLists.txt  library.json
UsbAction/src/HidMixer/: UsbAction.h
UsbAction/src/HidMixer/UsbActionDetail/: UsbAction.cpp  UsbAction.h
(+20 files in other folders)
